0.9.0 (currently working on)
- [#3576] Feature: Mention the event title, date, time and price in the thank-you and unregistration e-mail
- [#3640] Fix: The message about the UID is red
- [#3563] Feature: Automatically append the organizer's footer when sending an e-mail using the cancel/confirm forms
- [#3609] Fix: Monkey functionality is broken in some search widget parts
- [#3642] Fix: Test failure: test_Render_ForSentFromDate_PreselectsFromDateValues
- [#3641] Change: Update all copyrights to 2010
- [#3588] Feature: Add registration model and mapper
- [#3542] Fix: Failure in test case test_limitToAge_ForEventWithoutTargetGroupAndAgeProvided_FindsThisEvent
- [#3575] Change: Tweak the texts in the unregistration e-mail
- [#3541] Fix: Failure in test case testSendRemindersToOrganizersForCliBackendUserWithLanguageGermanSendsReminderInGerman
- [#3573] Change: Make the BE cancel/confirm e-mail form buttons play nicely with the new TYPO3 4.3 buttons styles
- [#3574] Change: Change the default texts in the cancel/confirm forms
- [#3533] Change: Make the company field one line and document how to change that
- [#3551] Fix: The configuration registry needs to make sure the configuration is loaded in the FE
- [#3517] Fix: The CSV export page for the registrations on a page, has the wrong content type
- [#3298] Feature: Provide a way to list the registrations for a selected event
- [#3508] Cleanup: Replace space + tab with tab
- [#3489] Change: Use the price view helper
- [#3491] Change: Allow prices with 3 decimal digits
- [#3436] Feature: Add a hook for modifying the salutation in the e-mails
- [#3446] Feature: Hide the "create new record" buttons if the logged-in BE user has no write access to the configured sysfolder or the corresponding table
- [#3294] Feature: Store the records created in the "Events" BE module in the sysfolder selected in the BE user groups
- [#3484] Fix: In some BE modules the bags are destructed to early or not at all