@@ -29,7 +29,7 @@
 			<label index="email_salutation_title_0">Herr</label>
 			<label index="email_salutation_title_1">Frau</label>
 			<label index="email_eventDate">am %s</label>
-			<label index="email_timeFrom">von %s</label>
+			<label index="email_timeFrom">von %s Uhr</label>
 			<label index="email_timeAt">um %s Uhr</label>
 			<label index="email_timeTo">bis</label>
 		</languageKey>
